// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio matches disabled snapshot 1`] = `
<label
  className="sc-hKMtZM esvHSN"
>
  <input
    className="sc-eCYdqJ fazssI"
    disabled={true}
    type="radio"
  />
  Disabled
</label>
`;

exports[`Radio matches snapshot 1`] = `
<label
  className="sc-hKMtZM daFlrm"
>
  <input
    className="sc-eCYdqJ lbbITm"
    type="radio"
  />
  Click Me
</label>
`;
